[package]
name = "transforms"
description = "A transform library to track reference frames and provide transforms between them."
authors = ["Deniz Hofmeister"]
license = "MIT"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/deniz-hofmeister/transforms"
keywords = ["robotics", "transform", "3d", "coordinate"]
categories = ["science::robotics", "no-std", "simulation", "mathematics"]
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
thiserror = "2.0.11"
approx = "0.5.1"
hashbrown = "0.15.2"

[dev-dependencies]
env_logger = "0.11.6"
log = "0.4.25"
criterion = "0.5.1"
tokio = { version = "1.43.0", features = ["full"] }

[[example]]
name = "no_std_minimal"
path = "examples/no_std_minimal.rs"
required-features = []

[[example]]
name = "no_std_full"
path = "examples/no_std_full.rs"
required-features = []

[[example]]
name = "std_minimal"
path = "examples/std_minimal.rs"
required-features = ["std"]

[[example]]
name = "std_full"
path = "examples/std_full.rs"
required-features = ["std"]

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1
lto = true
